Add new article

--- a/index.html
+++ b/index.html
@@ -481,6 +481,27 @@
         <div class="blog row row--half-padded mb-0">
             
             <div class="col-12 col-md-4 mb-md-0 blog__item">
+                <a class="blog__item-link" href="https://proandroiddev.com/is-onactivityresult-deprecated-in-activity-results-api-lets-deep-dive-into-it-302d5cf6edd" target="_blank">
+                    <div class="blog__image-container">
+                        <img class="lozad blog__cover-image"
+                                src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+                                data-src="https://andrewjap.dev/img/blog/activity-result-api.jpg"
+                                data-srcset="https://andrewjap.dev/img/blog/activity-result-api.jpg 1x, https://andrewjap.dev/img/blog/activity-result-api.jpg 2x"
+                                alt="Activity Results API: A better way to pass data between Activities"/>
+                    </div>
+                    <div class="blog__title">Activity Results API: A better way to pass data between Activities</div>
+                    <div class="blog__description">As we know passing data and getting responses between two activities are the most common thing we do during the development phase for a long time ago.</div>
+                    <div class="blog__details">
+                        <div class="blog__published-date">May 24</div>
+                        <i class="icon-dot"></i>
+                        <div class="blog__read-duration">2 min read</div>
+                        <div class="blog__medium-icon"></div>
+                    </div>
+
+                </a>
+            </div>
+            
+            <div class="col-12 col-md-4 mb-md-0 blog__item">
                 <a class="blog__item-link" href="https://blog.kmkonline.co.id/automate-your-android-app-bundle-publishing-using-jenkins-382a79786402" target="_blank">
                     <div class="blog__image-container">
                         <img class="lozad blog__cover-image"
